--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -1,37 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:viewBindingIgnore="true"
-    app:cardElevation="@dimen/cardview_default_elevation"
-    app:cardCornerRadius="4dp"
-    android:layout_margin="8dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <data>
+        <variable
+            name="character"
+            type="io.github.rosariopfernandes.minibrothereye.ui.list.CharacterAdapter.CharacterListItem"/>
+    </data>
+
+    <com.google.android.material.card.MaterialCardView
+        tools:viewBindingIgnore="true"
+        app:cardElevation="@dimen/cardview_default_elevation"
+        app:cardCornerRadius="4dp"
+        android:layout_margin="8dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/ivPhoto"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            tools:src="@tools:sample/avatars[0]"
-            />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tvName"
-            android:textSize="18sp"
-            android:textAlignment="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:textColor="?android:attr/textColorPrimary"
-            tools:text="Bane"/>
+            <ImageView
+                android:id="@+id/ivPhoto"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                app:imageSrc="@{character.photoUrl}"
+                tools:src="@tools:sample/avatars[0]" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tvName"
+                android:textSize="18sp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:textColor="?android:attr/textColorPrimary"
+                app:text="@{character.name}"
+                tools:text="Bane" />
 
-</com.google.android.material.card.MaterialCardView>
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+</layout>
