--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -44,9 +44,10 @@
             android:layout_height="match_parent"
             android:scrollbars="vertical"
             app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-            app:spanCount="2"
+            app:spanCount="@integer/characters_span_count"
             app:adapter="@{characterAdapter}"
-            app:visibility="@{loadState}"/>
+            app:visibility="@{loadState}"
+            tools:listitem="@layout/item_character"/>
 
     </FrameLayout>
 </layout>
