--- a/app/src/main/res/layout/fragment_character_info.xml
+++ b/app/src/main/res/layout/fragment_character_info.xml
@@ -5,8 +5,8 @@
 
     <data>
         <variable
-            name="character"
-            type="io.github.rosariopfernandes.minibrothereye.model.Character" />
+            name="viewmodel"
+            type="io.github.rosariopfernandes.minibrothereye.ui.characterinfo.CharacterInfoViewModel" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -34,6 +34,7 @@
                         android:layout_width="135dp"
                         android:layout_height="200dp"
                         android:scaleType="centerCrop"
+                        app:imageSrc="@{viewmodel.characterInfo.images.md}"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:src="@drawable/no_portrait" />
@@ -49,7 +50,7 @@
                         android:textColor="?android:attr/textColorPrimary"
                         android:textSize="24sp"
                         android:textStyle="bold"
-                        android:text="@{character.name}"
+                        android:text="@{viewmodel.characterInfo.name}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/ivCharacterPhoto"
                         app:layout_constraintTop_toTopOf="parent"
@@ -66,6 +67,7 @@
                         app:layout_constraintStart_toEndOf="@+id/ivCharacterPhoto"
                         app:layout_constraintTop_toBottomOf="@+id/tvCharacterName"
                         app:spanCount="3"
+                        app:powerStats="@{viewmodel.characterInfo.powerstats}"
                         tools:itemCount="6"
                         tools:listitem="@layout/item_powerstat" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -148,7 +150,7 @@
                         android:layout_marginBottom="8dp"
                         android:textColor="?android:attr/textColorPrimary"
                         android:textSize="18sp"
-                        android:text="@{character.appearance.gender}"
+                        android:text="@{viewmodel.characterInfo.appearance.gender}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/textView3"
                         app:layout_constraintStart_toStartOf="@+id/textView3"
@@ -162,7 +164,7 @@
                         android:layout_marginBottom="8dp"
                         android:textColor="?android:attr/textColorPrimary"
                         android:textSize="18sp"
-                        android:text="@{character.appearance.height[1]}"
+                        android:text="@{viewmodel.characterInfo.appearance.height[1]}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/textView4"
                         app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -176,7 +178,7 @@
                         android:layout_marginBottom="8dp"
                         android:textColor="?android:attr/textColorPrimary"
                         android:textSize="18sp"
-                        android:text="@{character.appearance.weight[1]}"
+                        android:text="@{viewmodel.characterInfo.appearance.weight[1]}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/textView5"
                         app:layout_constraintStart_toStartOf="@+id/textView5"
@@ -223,6 +225,9 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         android:textAlignment="center"
+                        app:biography="@{viewmodel.characterInfo.biography}"
+                        app:work="@{viewmodel.characterInfo.work}"
+                        app:connections="@{viewmodel.characterInfo.connections}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/textView9"
                         app:layout_constraintStart_toStartOf="@+id/textView9"
