--- a/app/src/main/res/layout/fragment_character_info.xml
+++ b/app/src/main/res/layout/fragment_character_info.xml
@@ -61,7 +61,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        app:layoutManager=".util.NonScrollableGridLayoutManager"
+                        android:nestedScrollingEnabled="false"
+                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/ivCharacterPhoto"
